--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "GTEx/TCR comparisons for Dewolf, _et al_ 2022"
+title: "Supplementary repository for Dewolf, _et al._ 2022"
 date: "`r Sys.Date()`"
 output:
   bookdown::gitbook: 
@@ -12,6 +12,8 @@ documentclass: book
 site: bookdown::bookdown_site
 ---
 # Introduction
+
+This repository contains the analyses presented in the manuscript and the code to generate the figures. 
 
 ## Installation
 
@@ -27,11 +29,12 @@ For reproducibility, `renv` was used to lock packages used.  After cloning the r
 - `23-figure3-S4-S5.Rmd` generates all the alluvial plots
 - `24-figure4.Rmd` generates all the venn diagrams of clone overlap
 - `25-figure5-S7-VECTRA.Rmd` generates the plots of cell types from the imaging data.  The imaging data is not public, but this is included for analysis transparency
-- `30-figureS2.Rmd` 
-- `32-FigureS12B-S12C-assess-cell-types.Rmd`
-- `33-figureS3.Rmd`
-- `37-figureS12D-abundance.Rmd`
-- `38-figureS4P-tableS5-UC-TCRs.Rmd`
-- `39-figure-S3-S8-S11.Rmd`
-- `41-figureS12A-addressing-questions-of-sampling-depth.Rmd`
+- `30-figureS2.Rmd` generates the plots showing the clinical features and JSD
+- `32-FigureS12B-S12C-assess-cell-types.Rmd` generates the analysis for assessing cell types based on the v and j gene alleles
+- `33-figureS3.Rmd` generates the plot of JSD vs Morisitta index
+- `37-figureS12D-abundance.Rmd` generates the accumulation curves of top 10 clones in each sample
+- `38-figureS4P-tableS5-UC-TCRs.Rmd` generates the plots involving the UC cohort described in [Werner, et al. 2018](https://doi.org/10.21417/LW2019CEI)
+- `39-figure-S3-S8-S11.Rmd` contains the "between vs within tissues" analysis assessing pairs of tissues's JSD score with their anatomic grouping
+- `41-figureS12A-addressing-questions-of-sampling-depth.Rmd` generates the species accumulation curves and PreseqR predictions of library complexity 
 - `index.Rmd` is this document
+
